www/templates/html/css/majors.css
#pagetitle span.subhead {
    text-transform:uppercase;
    color:#3f85ca;
    font-size:.6em;
    font-weight: 400;
    display:block;
}
#maincontent div.story h2.sec_header,
#maincontent div.story h3,
#maincontent div.story h4,
#maincontent div.story h5 {
    margin-top:1em;
}

.intro {
    font-size:115%;
    line-height:145%;
    }
#toc_nav {
    position:relative;
    font-size:150%;
    margin: 1em 0;
    top:10px;
    z-index:9;
}
#toc_bar {
	position:fixed;
	display:none;
	top:0;
	left: 0;
	height:40px;
	width:100%;
	background:#fff;
	text-align:center;	
	z-index:8;
	border-bottom:5px solid #e0e0e0;
	font-size:1.8em;
	padding-top:14px;
	opacity:0.90;
}
#toc_major_name {
	display:none;
	float:left;
	margin:-30px 0 0 215px;
	text-align:center;
}
table.major_quick_points {
    margin-bottom:2em;
}
table.major_quick_points caption,
table.major_quick_points .table_heading {
    display:none;
    visibility:hidden;
}

table.major_quick_points .attr {
    font-weight:bold;
}
table.major_quick_points .value {
    text-align:right;
}
#long_content {margin-top:2em;}

#maincontent #toc_nav {
    position: relative;
    background: #fafafa;
    -moz-border-radius:6px;
    -webkit-border-radius:6px;
    border-radius:6px;
}

#maincontent #tocToggle {
    display: block;
    position: absolute;
    top: 0;
    right: 5px;
    font-size: 2em;
    color: #999;
    line-height: 100%;
    cursor: pointer;
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    -o-transition: all .35s;
    -ms-transition: all .35s;
    transition: all .35s;
    text-decoration: none;
    border: none;
}

#maincontent #tocToggle.close {
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
    opacity: 1;
}

#maincontent ol#toc {
    font-size:.65em;
    list-style: upper-alpha;
    padding:10px 10px 10px 35px;
    margin:-7px 0 0 4px;
    overflow: hidden;
}

#maincontent ol#toc > li {
    font-weight: bold;
}

#maincontent ol#toc.open > li > ol {
    line-height: 200%;
    margin-left: 0;
    opacity: 1;
}

#maincontent ol#toc > li > ol > li {
    font-weight: normal;
}

#maincontent ol#toc > li > ol {
    position: relative;
    line-height: 0;
    margin-left: -100%;
    font-size: 90%;
    opacity: 0;

    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    -o-transition: all .5s;
    -ms-transition: all .5s;
    transition: all .5s;
}

#maincontent ol#toc ol { list-style: decimal;padding:0 0 0 25px;}
#maincontent ol#toc ol ol { list-style: lower-roman;padding:0 0 0 25px;}
#maincontent ol#toc ol ol ol { list-style: lower-alpha;padding:0 0 0 25px;}

@media (min-width: 768px) {
    #maincontent #toc_nav #tocToggle {
        opacity: 0;
    }

    #maincontent #toc_nav:hover #tocToggle,
    #maincontent #toc_nav #tocToggle.close {
        opacity: 1;
    }
}

a.top {
    float:right;
}

#maincontent h4.title-1, #maincontent h4.title-2, #maincontent h3#college-degree-requirements, #maincontent h3#bulletin-rule, #maincontent h2#college_requirements {margin-top:1em;}
#maincontent h5.title-3, #maincontent h5.title-4 {margin-top:.8em;}
#maincontent p + p.header-paragraph {
    margin-top:1em;
}

#maincontent p + p,
#maincontent h3 + p,
#maincontent h4 + p {
    margin-bottom:0;
}

#maincontent p + .sec_header, #maincontent p + .title-1 {
    margin-top: 1em;
}

#maincontent p.faculty-list + p.basic-text {
    margin-top:1em;
}

#maincontent p.college-name, #maincontent p.major-name {display:none;}

#maincontent p.list {
    margin-bottom:0em;
}
#maincontent p.list-indent {
    margin-bottom:0em;
    text-indent:1.5em;
}

#maincontent p.requirement-sec-1 {
    font-weight:bold;
    margin:1em 0 0;
}
#maincontent p.requirement-hours {
    margin-top:1em;
    font-weight: bold;
}
#maincontent .requirement-underline {
    text-decoration:underline;
}
#maincontent .requirement-ital,
#maincontent .basic-text-ital,
#maincontent .list-ital,
#maincontent .requirement-sec-3-note {
    font-style: italic;
}
#maincontent .requirement-bold,
#maincontent .basic-text-bold,
#maincontent .faculty-list-bold,
#maincontent .list-bold,
#maincontent .header-paragraph-title {
    font-weight: bold;
}
#maincontent p.requirement-sec-2,
#maincontent p.requirement-sec-3,
#maincontent p.requirement-sec-3-ledr,
#maincontent p.requirement-sec-3-note,
#maincontent p.requirement-sec-4 {
    margin:0 1em 0 0;
    display:block;
    clear:both;
}

#maincontent p.requirement-sec-3,
#maincontent p.requirement-sec-3-note,
#maincontent p.requirement-sec-3-ledr {
    margin-left:1em;
    margin-right:2em;
}
#maincontent p.requirement-sec-4,
#maincontent p.requirement-sec-4-ledr {
    margin-left:2em;
    margin-right:3em;
}

#maincontent li.bullet-2 {margin-left:1.1em;}
#maincontent li.bullet-3 {margin-left:2.2em;}
#maincontent p.bullet-2 {margin-left:3.3em;}
#maincontent p.numbered-list-2 {margin-left:3.3em;}
#maincontent p.numbered-list-3 {margin-left:4.4em;}

#maincontent p span {
    background-color:#FFF;
}
#maincontent p span.req_desc,
#maincontent p span.req_desc span.requirement-ital {
    padding-bottom:1px;
    border-bottom:2px solid #FFF;
}

#maincontent p span.leader {
    display:block;
    width:100%;
    border-bottom:1px dotted;
    }

#maincontent p span.req_value {
    float:right;
    padding-left:3px;
    margin-top:-1.2em;
}

#maincontent p.basic-text {
    margin:0;
    text-indent: 1.5em;
}

#maincontent p.quick-points,
#maincontent p.major-name {
    display:none;
}

#maincontent p.faculty-list {
    margin:0;
}

#maincontent table p {
    margin:0;
}

